<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test2"
    tools:context="com.stylepoints.habittracker.viewmodel.HabitRelatedActivities.HabitNewActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <CheckBox
        android:id="@+id/checkBoxMonday"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/monday"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeeklyScheduleTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/checkBoxTuesday" />

    <CheckBox
        android:id="@+id/checkBoxTuesday"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/tuesday"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeeklyScheduleTitle"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxMonday"
        app:layout_constraintRight_toLeftOf="@+id/checkBoxWednesday" />

    <CheckBox
        android:id="@+id/checkBoxWednesday"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/wednesday"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeeklyScheduleTitle"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxTuesday"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxThursday"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/thursday"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTuesday"
        app:layout_constraintRight_toLeftOf="@+id/checkBoxFriday"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxFriday"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/friday"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTuesday"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxThursday" />

    <CheckBox
        android:id="@+id/checkBoxSaturday"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/saturday"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxThursday"
        app:layout_constraintRight_toLeftOf="@+id/checkBoxSunday"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxSunday"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/sunday"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFriday"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxSaturday" />

    <TextView
        android:id="@+id/textViewHabitNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/habit_name"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStartingDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/starting_date"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewDate"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewWeeklyScheduleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/weekly_schedule"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textViewReasonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/reason"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSaturday" />

    <EditText
        android:id="@+id/editTextHabitName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/name_of_habit"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:maxLength="20"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewHabitNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewHabitNameTitle" />

    <EditText
        android:id="@+id/editTextReason"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/reason_of_habit"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:maxLength="30"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewReasonTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textViewReasonTitle"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/buttonSetDate"
        app:layout_constraintStart_toEndOf="@+id/textViewStartingDateTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewHabitNameTitle" />

    <Button
        android:id="@+id/buttonSetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/set_date"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonHabitStats"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/statistics"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveHabit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/buttonSaveHabit"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/save_habit"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteHabit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/buttonDeleteHabit"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/delete_habit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?android:attr/selectableItemBackground"/>


</android.support.constraint.ConstraintLayout>