<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.HabitEventRelatedActivites.EventEditActivity">

    <TextView
        android:id="@+id/textViewDateOfOccurence"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/_2015_01_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textViewEventNameTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDateOfOccurenceTitle"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEventName" />

    <TextView
        android:id="@+id/textViewEventNameTitle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/event_name"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textViewDateOfOccurenceTitle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/date_of_occurence"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventNameTitle" />

    <TextView
        android:id="@+id/textViewCommentTitle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="Comment"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateOfOccurenceTitle" />

    <TextView
        android:id="@+id/textViewPhotographTitle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/photograph"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCommentTitle" />

    <Button
        android:id="@+id/buttonTakePhoto"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/take_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhotographTitle" />

    <Button
        android:id="@+id/buttonSaveEvent"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:gravity="center"
        android:text="Update Event"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonDeleteEvent"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/delete_event"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/spinnerEventName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/example_chicken"
        android:inputType="textPersonName"
        android:text="@string/jogging"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textViewEventNameTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/editTextEventComment"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="left"
        android:hint="Counter Description"
        android:inputType="textPersonName"
        android:text="@string/ran_3_km_today"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textViewCommentTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCommentTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateOfOccurence" />

    <ImageView
        android:id="@+id/imageViewEventPhoto"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTakePhoto"
        app:layout_constraintEnd_toEndOf="@+id/editTextEventComment"
        app:layout_constraintStart_toStartOf="@+id/editTextEventComment"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventComment"
        app:srcCompat="@android:drawable/alert_dark_frame" />

    <CheckBox
        android:id="@+id/checkBoxAttachLocation"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/attach_location"
        app:layout_constraintEnd_toStartOf="@+id/imageViewEventPhoto"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTakePhoto" />


</android.support.constraint.ConstraintLayout>